[project]
name = "git-fs"
version = "0.0.1-pre"
authors = ["Josh Stone <cuviper@gmail.com>"]

[[bin]]
name = "git-fs"
test = false
doc = false

[lib]
name = "gitfs"
test = false
doc = false

[dependencies.rust-fuse]
#git = "https://github.com/zargony/rust-fuse"
git = "https://github.com/cuviper/rust-fuse"
branch = "rust-nightly"

[dependencies.git2]
git = "https://github.com/alexcrichton/git2-rs"

[dependencies.probe]
git = "https://github.com/cuviper/rust-libprobe"
