[project]
name = "git-fs"
version = "0.0.1-pre"
authors = ["Josh Stone <cuviper@gmail.com>"]

[[bin]]
name = "git-fs"
test = false
doc = false

[lib]
name = "gitfs"
test = false
doc = false

[dependencies]
#fuse = "0"
git2 = "0"
probe = "0"
time = "0"

[dependencies.fuse]
git = "https://github.com/zargony/rust-fuse"
